[gd_scene load_steps=4 format=3 uid="uid://enemy001"]

[ext_resource type="Script" path="res://scripts/enemies/enemy.gd" id="1_enemy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_enemy"]
radius = 14.0

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_enemy"]
size = Vector2(28, 28)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_enemy")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("PlaceholderTexture2D_enemy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_enemy")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 1.0
one_shot = true

[node name="HitFlashTimer" type="Timer" parent="."]
wait_time = 0.08
one_shot = true
